# pvr.plutotv

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  kodi-pvr-waipu.install  rules
pvr.plutotv/: addon.xml.in  changelog.txt
pvr.plutotv/resources/: settings.xml
pvr.plutotv/resources/language/resource.language.af_za/: strings.po
pvr.plutotv/resources/language/resource.language.am_et/: strings.po
pvr.plutotv/resources/language/resource.language.ar_sa/: strings.po
pvr.plutotv/resources/language/resource.language.az_az/: strings.po
pvr.plutotv/resources/language/resource.language.be_by/: strings.po
pvr.plutotv/resources/language/resource.language.bg_bg/: strings.po
pvr.plutotv/resources/language/resource.language.bs_ba/: strings.po
pvr.plutotv/resources/language/resource.language.ca_es/: strings.po
pvr.plutotv/resources/language/resource.language.cs_cz/: strings.po
pvr.plutotv/resources/language/resource.language.cy_gb/: strings.po
pvr.plutotv/resources/language/resource.language.da_dk/: strings.po
pvr.plutotv/resources/language/resource.language.de_de/: strings.po
pvr.plutotv/resources/language/resource.language.el_gr/: strings.po
pvr.plutotv/resources/language/resource.language.en_au/: strings.po
pvr.plutotv/resources/language/resource.language.en_gb/: strings.po
pvr.plutotv/resources/language/resource.language.en_nz/: strings.po
pvr.plutotv/resources/language/resource.language.en_us/: strings.po
pvr.plutotv/resources/language/resource.language.eo/: strings.po
src/: Curl.cpp  Curl.h  PlutotvData.cpp  PlutotvData.h  Utils.cpp  Utils.h
(+56 files in other folders)
